Horizontal scrolling prevented

--- a/contact/contact.css
+++ b/contact/contact.css
@@ -62,17 +62,61 @@
 body {
     font-family: 'Inter', sans-serif;
     background: #F6F7F8;
-
+    overflow-x: hidden;
 }
 
 body.modal-open {
-    background-color: rgba(0, 0, 0, 0.1);
-    overflow: hidden; /* Verhindert Scrollen, wenn das Modal geöffnet ist */
+    overflow: hidden;
 }
 
 .inactive {
-    background-color: rgba(0, 0, 0, 0.1);
-    pointer-events: none; /* Verhindert Interaktion */
+    background: rgba(0, 0, 0, 0.1);
+    pointer-events: none;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.1);
+    display: none;
+}
+
+.contact-form {
+    position: fixed;
+    top: 50%;
+    left: 100%;
+    transform: translateY(-50%);
+    width: 400px;
+    background: white;
+    padding: 20px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    transition: left 0.5s ease;
+    z-index: 999;
+    display: none;
+}
+
+.contact-form.show {
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    display: block;
+}
+
+.add-contact-form {
+    position: fixed;
+    top: 50%;
+    left: 100%;
+    transform: translateY(-50%);
+    width: 1212px;
+    height: 592px;
+    background: white;
+    border-radius: 30px;
+    overflow: hidden;
+    transition: left 0.5s ease;
+    z-index: 999;
+    display: none;
 }
 
 /* Contact */
@@ -163,11 +207,21 @@ body.modal-open {
     align-items: baseline;
     gap: 35px;
     cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.contact-item.highlighted {
+    background-color:  #2A3647;
+    color: #fff;
+    
 }
 
 .contact-item:hover {
-    background-color: rgb(235, 232, 232);
+    background: linear-gradient(180deg, #F9F9F9 0%, #F0F0F0 100%);
+}
 
+.contact-info-item:hover {
+    background: linear-gradient(180deg, #F9F9F9 0%, #F0F0F0 100%);
 }
 
 .contact-info-item {
@@ -175,10 +229,8 @@ body.modal-open {
     align-items: center;
     width: 352px;
     height: 78px;
-    padding: 15px;
     gap: 35px;
     border-radius: 10px;
-    background: #FFFFFF;
     animation-timing-function: ease-in-out;
     animation-duration: 100ms;
 }
@@ -295,7 +347,7 @@ body.modal-open {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 35px;
+    gap: 5px;
 }
 
 #addContact {
@@ -740,23 +792,15 @@ body.modal-open {
 }
 
 .popup-buttons:hover {
-    color: #29ABE2;
+    filter: brightness(0) saturate(1000%) invert(59%) sepia(45%) saturate(3434%) hue-rotate(161deg) brightness(95%) contrast(89%);
 }
 
 .edit {
-    
+    display: flex;
+    align-items: center;
     width: 81px;
     height: 24px;
     gap: 8px;
-
-
-}
-
-.edit-icon:hover {
-    width: 83px;
-    height: 24px;
-    gap: 8px;
-
 }
 
 .delete {
@@ -766,10 +810,6 @@ body.modal-open {
     font-weight: 400;
     line-height: 19.2px;
     text-align: left;
-}
-
-.delete-icon:hover {
-    color: #29ABE2;
 }
 
 .popup-contact-info {
